# rust_os

./: Cargo.toml  readme.md
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
